--- a/lab4/lab4.html
+++ b/lab4/lab4.html
@@ -69,6 +69,8 @@
     
             <img src="img/alarm1.png">
             <img src="img/alarm2.png">
+            <img src="img/alarm3.png">
+
     </main>
 
     <main id="button4">
