modified img scripts in lab4

--- a/lab4/lab4.html
+++ b/lab4/lab4.html
@@ -74,9 +74,13 @@
     </main>
 
     <main id="button4">
-        <h3>Сценарії на JavaScript, застосовані у власному сайті</h3>
-        <img src="img/script1.png">
-        <img src="img/script2.png">
+        <h3>Сценарії на JavaScript, застосовані у власному сайті</h3><br>
+        <p>фільтрація даних</p>
+        <img src="img/script1.png"><br>
+        <p>Видимість кнопки меню</p>
+        <img src="img/script2.png"><br>
+        <p>Кнопка читати далі</p>
+        <img src="img/script3.png">
 
     </main>
     
