--- a/lab4/lab4.html
+++ b/lab4/lab4.html
@@ -24,6 +24,9 @@
             <a href="../lab2/lab2.html">Лабораторна робота №2</a>
             <a href="../lab3/lab3.html">Лабораторна робота №3</a>
             <a href="../lab4/lab4.html">Лабораторна робота №4</a>
+            <a href="../lab5/lab5.html">Лабораторна робота №5</a>
+            <a href="../lab6/lab6.html">Лабораторна робота №6</a>
+            <a href="../lab7/lab7.html">Лабораторна робота №7</a>
         </nav>
     </header>
 
