modified:   lab2/lab2.html

--- a/lab2/lab2.html
+++ b/lab2/lab2.html
@@ -10,7 +10,7 @@
 
     <link rel="icon" type="image/x-icon" href="../img/favicon.ico">
 
-    <title>Лабораторна робота №6</title>
+    <title>Лабораторна робота №2</title>
 </head>
 
 <body>
@@ -35,7 +35,8 @@
 
 
     <div id="content">
-        <p>Оберіть пункт лабораторної роботи...</p>
+        <p>Для перегляду завдань, застосованих до веб-додатку, оберіть пункт лабораторної роботи на панелі зліва</p>
+        <h3>Посилання на документ виконаних завдань 1, 3, 5, 7, 9, 10</h3>
         <a href="https://yuliakushnir.github.io/Lab6/" style="text-decoration: underline;">Звіт про виконані завдання лабораторної роботи</a><br>
     </div>
 
