--- a/lab3/lab3.html
+++ b/lab3/lab3.html
@@ -10,7 +10,7 @@
 
     <link rel="icon" type="image/x-icon" href="../img/favicon.ico">
 
-    <title>Лабораторна робота №7</title>
+    <title>Лабораторна робота №3</title>
 </head>
 
 <body>
@@ -37,8 +37,9 @@
     </nav>
 
     <div id="content">
-        <p>Оберіть пункт лабораторної роботи...</p>
-        <a href="https://yuliakushnir.github.io/Lab7/index.html" style="text-decoration: underline;">Звіт про виконані завдання лабораторної роботи</a><br>
+        <p>Для перегляду завдань, застосованих до веб-додатку, оберіть пункт лабораторної роботи на панелі зліва</p>
+        <h3>Посилання на документ виконаних завдань 1, 3, 5, 7, 8, 9, 10:</h3>
+        <a href="https://yuliakushnir.github.io/Lab7/index.html" style="text-decoration: underline;">Перейти до звіту</a><br>
     </div>
     
     <main id="button1">
